--- a/login.css
+++ b/login.css
@@ -11,7 +11,9 @@ h1{
     color: rgb(115, 167, 63);
 }
 .box{
-    
-    
-    display: flex;
+    margin-left: 10px;
+    background-color: white;
+    height: 50%;
+    width: 50%;
+    display: inline-block;
 }
